# standard-vision

./: .gitignore  Cargo.toml  rustfmt.toml
opencv-camera/: Cargo.toml
opencv-camera/src/: image.rs  lib.rs
src/: lib.rs  traits.rs  types.rs
standard-vision/: Cargo.toml
standard-vision/src/: traits.rs  types.rs
stdvis-core/: Cargo.toml
stdvis-core/src/: lib.rs  traits.rs  types.rs
stdvis-opencv/: Cargo.toml
stdvis-opencv/src/: camera.rs  convert.rs
stdvis/core/: Cargo.toml
stdvis/core/src/: types.rs
stdvis/opencv/: Cargo.toml
stdvis/opencv/src/: camera.rs  lib.rs
tools/cli/: Cargo.toml
tools/cli/src/: commands.rs  lib.rs  main.rs
tools/cli/src/commands/: calibrate.rs  sample.rs
