[package]
name = "stdvis-opencv"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
stdvis-core = { path = "../stdvis-core" }
ndarray = "0.13.0"

[target.'cfg(linux)'.dependencies]
opencv = { version = "0.30", default-features = false, features = ["opencv-4"] }

[target.'cfg(not(linux))'.dependencies]
opencv = { version = "0.30", default-features = false, features = ["opencv-4", "buildtime-bindgen"] }

[dev-dependencies]
png = "^0.15.2"
